--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
-  "name": "ng-alain",
+  "name": "cms-lbh",
   "version": "7.3.2",
-  "description": "ng-zorro-antd admin panel front-end framework",
-  "author": "cipchk",
-  "homepage": "https://ng-alain.github.io/ng-alain/",
-  "bugs": {
-    "url": "https://github.com/ng-alain/ng-alain/issues"
-  },
+  "description": "Content Management System LBH",
+  "author": "zenhuw",
   "license": "MIT",
-  "keywords": [
-    "delon",
-    "antd",
-    "ng-zorro-antd",
-    "angular",
-    "component",
-    "scaffold"
-  ],
   "scripts": {
     "ng": "ng",
-    "start": "npm run color-less && ng serve -o",
+    "start": "npm run color-less && ng serve --host 192.168.1.12 -o",
     "hmr": "npm run color-less && ng serve -c=hmr",
     "build": "npm run color-less && ng build --prod --build-optimizer",
     "analyze": "ng build --prod --build-optimizer --stats-json",
@@ -31,7 +19,8 @@
     "test": "ng test --watch",
     "test-coverage": "ng test --code-coverage --watch=false",
     "color-less": "node scripts/color-less.js",
-    "icon": "ng g ng-alain:plugin icon"
+    "icon": "ng g ng-alain:plugin icon",
+    "graphql": "gql-gen --config codegen.yml"
   },
   "dependencies": {
     "@angular/animations": "~7.2.0",
@@ -42,42 +31,67 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
     "@antv/data-set": "^0.10.2",
     "@antv/g2": "^3.5.3",
     "@antv/g2-plugin-slider": "^2.1.1",
+    "@delon/abc": "^7.6.1",
+    "@delon/acl": "^7.6.1",
+    "@delon/auth": "^7.6.1",
+    "@delon/cache": "^7.6.1",
+    "@delon/chart": "^7.6.1",
+    "@delon/form": "^7.6.1",
+    "@delon/mock": "^7.6.1",
+    "@delon/theme": "^7.6.1",
+    "@delon/util": "^7.6.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "ajv": "^6.10.0",
-    "@delon/abc": "^7.3.2",
-    "@delon/acl": "^7.3.2",
-    "@delon/auth": "^7.3.2",
-    "@delon/cache": "^7.3.2",
-    "@delon/chart": "^7.3.2",
-    "@delon/form": "^7.3.2",
-    "@delon/mock": "^7.3.2",
-    "@delon/theme": "^7.3.2",
-    "@delon/util": "^7.3.2",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.3.1",
+    "apollo-cache-inmemory": "^1.3.2",
+    "apollo-client": "^2.4.0",
+    "apollo-link": "^1.2.0",
+    "core-js": "^2.5.4",
+    "cryptojs": "^2.5.3",
     "file-saver": "^2.0.1",
-    "ng-zorro-antd": "^7.3.3",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.10.0",
+    "moment": "^2.24.0",
+    "ng-zorro-antd": "^7.5.0",
     "ngx-countdown": "^3.2.0",
     "ngx-tinymce": "^7.0.0",
     "ngx-ueditor": "^2.1.3",
+    "qrious": "^4.0.2",
+    "rxjs": "~6.3.3",
     "screenfull": "^4.2.0",
-    "qrious": "^4.0.2"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@angularclass/hmr": "^2.1.3",
+    "@delon/testing": "^7.3.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jszip": "^3.1.5",
+    "@types/mockjs": "^1.0.2",
+    "@types/node": "^12.0.2",
+    "codecov": "^3.2.0",
     "codelyzer": "~4.5.0",
+    "editorconfig-tools": "^0.1.1",
+    "gh-pages": "^2.0.1",
+    "graphql-code-generator": "^0.18.2",
+    "graphql-codegen-flow": "^0.18.2",
+    "graphql-codegen-introspection": "^0.18.2",
+    "graphql-codegen-typescript-apollo-angular": "^0.18.2",
+    "graphql-codegen-typescript-client": "^0.18.2",
+    "graphql-codegen-typescript-common": "^0.18.2",
+    "graphql-codegen-typescript-operations": "^0.19.0-alpha.80bb6e0c",
+    "graphql-codegen-typescript-resolvers": "^0.18.2",
+    "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -85,24 +99,14 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
-    "@angularclass/hmr": "^2.1.3",
-    "@types/jszip": "^3.1.5",
-    "@types/mockjs": "^1.0.2",
-    "codecov": "^3.2.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-language-service": "^0.9.9",
-    "editorconfig-tools": "^0.1.1",
-    "husky": "^1.3.1",
-    "gh-pages": "^2.0.1",
-    "lint-staged": "^8.1.0",
     "less-bundle-promise": "^1.0.7",
+    "lint-staged": "^8.1.0",
     "mockjs": "^1.0.1-beta3",
+    "ng-alain": "^7.3.2",
+    "ng-alain-codelyzer": "^0.0.1",
     "prettier": "^1.16.1",
     "prettier-stylelint": "^0.4.2",
+    "protractor": "~5.4.0",
     "stylelint": "^10.0.1",
     "stylelint-config-css-modules": "^1.4.0",
     "stylelint-config-prettier": "^5.1.0",
@@ -110,11 +114,13 @@
     "stylelint-config-standard": "^18.3.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
     "stylelint-order": "^3.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-language-service": "^0.9.9",
+    "typescript": "~3.2.2",
     "webpack-bundle-analyzer": "^3.3.2",
-    "xlsx": "^0.14.2",
-    "@delon/testing": "^7.3.2",
-    "ng-alain": "^7.3.2",
-    "ng-alain-codelyzer": "^0.0.1"
+    "xlsx": "^0.14.2"
   },
   "husky": {
     "hooks": {
