--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cms-lbh",
+  "name": "cmslbh",
   "version": "7.3.2",
   "description": "Content Management System LBH",
   "author": "zenhuw",
