--- a/codegen.yml
+++ b/codegen.yml
@@ -12,9 +12,4 @@ generates:
       - typescript
       - typescript-operations
       - typescript-client
-      - typescript-apollo-angular
-  ./src/app/shared/graphql/generated/typing.ts:
-    plugins:
-      - typescript
-    config:
-      avoidOptionals: false
+      - typescript-apollo-angular\
