change husky setting

--- a/package.json
+++ b/package.json
@@ -125,6 +125,10 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint-staged"
+    },
+    "linters": {
+      "*.{cmd,html,json,md,sh,txt,xml,yml}": ["editorconfig-tools fix", "git add"],
+      "*.ts": ["npm run lint:ts", "prettier --write", "git add"]
     }
   },
   "lint-staged": {
