--- a/package.json
+++ b/package.json
@@ -133,19 +133,9 @@
     "*.less": ["stylelint 'src/**/*.less' --syntax less --fix", "git add"]
   },
   "lint-staged": {
-    "*.{cmd,html,json,md,sh,txt,xml,yml}": [
-      "editorconfig-tools fix",
-      "git add"
-    ],
-    "*.ts": [
-      "npm run lint:ts",
-      "prettier --write",
-      "git add"
-    ],
-    "*.less": [
-      "stylelint 'src/**/*.less' --syntax less --fix",
-      "git add"
-    ],
+    "*.{cmd,html,json,md,sh,txt,xml,yml}": ["editorconfig-tools fix", "git add"],
+    "*.ts": ["npm run lint:ts", "prettier --write", "git add"],
+    "*.less": ["stylelint 'src/**/*.less' --syntax less --fix", "git add"],
     "ignore": [
       "src/assets/*"
     ]
