--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cmslbh",
-  "version": "7.3.2",
+  "version": "0.1.0",
   "description": "Content Management System LBH",
   "author": "zenhuw",
   "license": "MIT",
@@ -45,6 +45,7 @@
     "@delon/util": "^7.6.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/file-saver": "^2.0.1",
     "ajv": "^6.10.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
@@ -53,7 +54,7 @@
     "apollo-link": "^1.2.0",
     "core-js": "^2.5.4",
     "cryptojs": "^2.5.3",
-    "file-saver": "^2.0.1",
+    "file-saver": "^2.0.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
     "moment": "^2.24.0",
@@ -127,11 +128,17 @@
       "pre-commit": "npm run lint-staged"
     }
   },
-
   "lint-staged": {
     "linters": {
-      "*.ts": ["npm run lint:ts", "prettier --write", "git add"],
-      "*.less": ["stylelint 'src/**/*.less' --syntax less --fix", "git add"]
+      "*.ts": [
+        "npm run lint:ts",
+        "prettier --write",
+        "git add"
+      ],
+      "*.less": [
+        "stylelint 'src/**/*.less' --syntax less --fix",
+        "git add"
+      ]
     },
     "ignore": [
       "src/assets/*"
