--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,6 +8,7 @@
   "plugins": ["stylelint-order", "stylelint-declaration-block-no-ignored-properties"],
   "rules": {
     "no-descending-specificity": null,
+    "no-empty-source":null,
     "plugin/declaration-block-no-ignored-properties": true,
     "selector-type-no-unknown": [
       true,
