--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "npm run color-less && ng serve --host 192.168.1.12 -o",
+    "start": "npm run color-less && ng serve --host localhost -o",
     "hmr": "npm run color-less && ng serve -c=hmr",
     "build": "npm run color-less && ng build --prod --build-optimizer",
     "analyze": "ng build --prod --build-optimizer --stats-json",
@@ -84,14 +84,11 @@
     "codelyzer": "~4.5.0",
     "editorconfig-tools": "^0.1.1",
     "gh-pages": "^2.0.1",
-    "graphql-code-generator": "^0.18.2",
-    "graphql-codegen-flow": "^0.18.2",
-    "graphql-codegen-introspection": "^0.18.2",
-    "graphql-codegen-typescript-apollo-angular": "^0.18.2",
-    "graphql-codegen-typescript-client": "^0.18.2",
-    "graphql-codegen-typescript-common": "^0.18.2",
-    "graphql-codegen-typescript-operations": "^0.19.0-alpha.80bb6e0c",
-    "graphql-codegen-typescript-resolvers": "^0.18.2",
+    "@graphql-codegen/cli": "^1.0.0",
+    "@graphql-codegen/typescript": "^1.0.0",
+    "@graphql-codegen/typescript-operations": "^1.0.0",
+    "@graphql-codegen/typescript-apollo-angular": "^1.0.0",
+    "@graphql-codegen/typescript-compatibility": "^1.0.0",
     "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -141,7 +138,9 @@
       ]
     },
     "ignore": [
-      "src/assets/*"
+      "src/assets/*",
+      "src/app/shared/graphql/generated/*",
+      "**/**/*.spec.ts"
     ]
   }
 }
