--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: http://localhost:3000/graphql
+schema: http://192.168.1.5:3000/graphql
 documents: src/app/shared/graphql/types/*.graphql
 config:
   scalars:
