--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@types/file-saver": "^2.0.1",
     "ajv": "^6.10.0",
+    "angular-linky": "^1.2.2",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
     "apollo-cache-inmemory": "^1.3.2",
@@ -66,6 +67,7 @@
     "rxjs": "~6.3.3",
     "screenfull": "^4.2.0",
     "tslib": "^1.9.0",
+    "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
