--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "npm run color-less && ng serve --host 192.168.1.7 -o",
+    "start": "npm run color-less && ng serve --host 192.168.1.2 -o",
     "hmr": "npm run color-less && ng serve -c=hmr",
     "build": "npm run color-less && ng build --prod --build-optimizer",
     "analyze": "ng build --prod --build-optimizer --stats-json",
@@ -23,6 +23,8 @@
     "graphql": "gql-gen --config codegen.yml"
   },
   "dependencies": {
+    "@agm/core": "1.0.0-beta.7",
+    "@agm/js-marker-clusterer": "1.0.0-beta.7",
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -45,6 +47,7 @@
     "@delon/util": "^7.6.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@swimlane/ngx-charts": "10.1.0",
     "@types/file-saver": "^2.0.1",
     "ajv": "^6.10.0",
     "angular-linky": "^1.2.2",
@@ -53,11 +56,14 @@
     "apollo-cache-inmemory": "^1.3.2",
     "apollo-client": "^2.4.0",
     "apollo-link": "^1.2.0",
+    "apollo-link-ws": "^1.0.19",
+    "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
     "cryptojs": "^2.5.3",
     "file-saver": "^2.0.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
+    "js-marker-clusterer": "^1.0.0",
     "moment": "^2.24.0",
     "ng-zorro-antd": "^7.5.0",
     "ngx-countdown": "^3.2.0",
@@ -66,6 +72,7 @@
     "qrious": "^4.0.2",
     "rxjs": "~6.3.3",
     "screenfull": "^4.2.0",
+    "subscriptions-transport-ws": "^0.9.16",
     "tslib": "^1.9.0",
     "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
