--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "npm run color-less && ng serve --host 192.168.1.2 -o",
+    "start": "npm run color-less && ng serve --host localhost -o",
     "hmr": "npm run color-less && ng serve -c=hmr",
-    "build": "npm run color-less && ng build --prod --build-optimizer",
+    "build": "npm run color-less && ng build --prod",
     "analyze": "ng build --prod --build-optimizer --stats-json",
     "lint": "npm run lint:ts && npm run lint:style",
     "lint:ts": "tslint -p src/tsconfig.app.json -c tslint.json 'src/**/*.ts'",
@@ -47,7 +47,7 @@
     "@delon/util": "^7.6.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@swimlane/ngx-charts": "10.1.0",
+    "@swimlane/ngx-charts": "^12.1.0",
     "@types/file-saver": "^2.0.1",
     "ajv": "^6.10.0",
     "angular-linky": "^1.2.2",
@@ -57,6 +57,7 @@
     "apollo-client": "^2.4.0",
     "apollo-link": "^1.2.0",
     "apollo-link-ws": "^1.0.19",
+    "chart.js": "^2.9.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
     "cryptojs": "^2.5.3",
@@ -66,6 +67,7 @@
     "js-marker-clusterer": "^1.0.0",
     "moment": "^2.24.0",
     "ng-zorro-antd": "^7.5.0",
+    "ng2-charts": "^2.2.3",
     "ngx-countdown": "^3.2.0",
     "ngx-tinymce": "^7.0.0",
     "ngx-ueditor": "^2.1.3",
